@@ -136,10 +136,6 @@ BU::BU(xdaq::ApplicationStub *s)
   xgi::bind(this,&evf::BU::customWebPage,"customWebPage");
   
   
-  // determine valid fed ids
-  for (unsigned int i=0;i<(unsigned int)FEDNumbering::MAXFEDID+1;i++)
-    if (FEDNumbering::inRangeNoGT(i)) validFedIds_.push_back(i);
-  
   // export parameters to info space(s)
   exportParameters();
 
@@ -181,6 +177,20 @@ bool BU::configuring(toolbox::task::WorkLoop* wl)
   try {
     LOG4CPLUS_INFO(log_,"Start configuring ...");
     reset();
+
+    // determine valid fed ids (assumes Playback EP is already configured and hence PBRDP::instance 
+    // not null in case we are playing back)
+    if (0!=PlaybackRawDataProvider::instance()) {
+      for (unsigned int i=0;i<(unsigned int)FEDNumbering::MAXFEDID+1;i++)
+	if (FEDNumbering::inRange(i)) validFedIds_.push_back(i);
+    }
+    else{
+      for (unsigned int i=0;i<(unsigned int)FEDNumbering::MAXFEDID+1;i++)
+	if (FEDNumbering::inRangeNoGT(i)) validFedIds_.push_back(i);
+    }
+
+
+
     LOG4CPLUS_INFO(log_,"Finished configuring!");
     fsm_.fireEvent("ConfigureDone",this);
   }
